mon: fix the core dump when use the mgr command

When mon reply the commnd to client,if it do not set

mgr flag.The command will send to mon.But the mon can

not handle some commands.this will result in mon core

dump.

Fixes:http://tracker.ceph.com/issues/21770?next_issue_id=21769&prev_issue_id=21771

Signed-off-by: song baisen <linghucongsong@163.com>